k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cotalk-prod
  labels:
    app.kubernetes.io/name: cotalk
    app.kubernetes.io/part-of: cotalk-system
    environment: prod
